feat: finished starter react-native code

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "sim-card-auth-react-native",
-  "displayName": "sim-card-auth-react-native"
+  "name": "simCardAuthReactNative",
+  "displayName": "simCardAuthReactNative"
 }
