--- a/mobile/package.json
+++ b/mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mobile",
+  "name": "sim-card-auth-react-native",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,9 +10,13 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-picker/picker": "^1.9.11",
     "axios": "^0.21.1",
+    "country-data": "^0.0.31",
     "react": "16.13.1",
     "react-native": "0.63.4",
+    "react-native-flash-message": "^0.1.23",
+    "react-native-gesture-handler": "^1.10.3",
     "tru-sdk-react-native": "^0.1.6"
   },
   "devDependencies": {
