--- a/mobile/android/build.gradle
+++ b/mobile/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "29.0.2"
-        minSdkVersion = 16
+        minSdkVersion = 21
         compileSdkVersion = 29
         targetSdkVersion = 29
     }
@@ -12,7 +12,7 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath("com.android.tools.build:gradle:3.5.3")
+        classpath("com.android.tools.build:gradle:3.6.3")
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -33,5 +33,8 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://www.jitpack.io' }
+         maven {
+            url "https://gitlab.com/api/v4/projects/22035475/packages/maven"
+        }
     }
 }
