--- a/mobile/package.json
+++ b/mobile/package.json
@@ -27,7 +27,8 @@
     "eslint": "^6.5.1",
     "jest": "^25.1.0",
     "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1"
+    "react-test-renderer": "16.13.1",
+    "yarn": "^1.22.10"
   },
   "eslintConfig": {
     "extends": [
