--- a/mobile/package.json
+++ b/mobile/package.json
@@ -16,8 +16,7 @@
     "react": "16.13.1",
     "react-native": "0.63.4",
     "react-native-flash-message": "^0.1.23",
-    "react-native-gesture-handler": "^1.10.3",
-    "tru-sdk-react-native": "^0.1.6"
+    "react-native-gesture-handler": "^1.10.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
