--- a/package.json
+++ b/package.json
@@ -1,17 +1,55 @@
 {
-  "name": "tru-sim-card-auth-react-native-example",
-  "version": "1.0.0",
-  "description": "Example React Native app for tru-sim-card-auth-react-native",
-  "main": "index.js",
+  "name": "sim-card-auth-react-native",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "restore-mobile": "cd mobile && npm install"
+    "android": "react-native run-android",
+    "ios": "react-native run-ios",
+    "start": "react-native start",
+    "test": "jest",
+    "lint": "eslint ."
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/tru-ID/sim-card-auth-react-native.git"
+  "dependencies": {
+    "@react-native-picker/picker": "^1.9.11",
+    "axios": "^0.21.1",
+    "country-data": "^0.0.31",
+    "react": "16.13.1",
+    "react-native": "0.63.4",
+    "react-native-flash-message": "^0.1.23",
+    "react-native-gesture-handler": "^1.10.3",
+    "tru-sdk-react-native": "^0.1.6"
   },
   "devDependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
+    "@react-native-community/eslint-config": "^1.1.0",
+    "babel-jest": "^25.1.0",
+    "eslint": "^6.5.1",
+    "jest": "^25.1.0",
+    "metro-react-native-babel-preset": "^0.59.0",
+    "react-test-renderer": "16.13.1",
     "yarn": "^1.22.10"
+  },
+  "eslintConfig": {
+    "extends": [
+      "@react-native-community",
+      "prettier"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {
+          "quoteProps": "consistent",
+          "singleQuote": true,
+          "tabWidth": 2,
+          "trailingComma": "es5",
+          "useTabs": false,
+          "endOfLine": "auto"
+        }
+      ]
+    }
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
