feat: created new RN project, installed dependencies and moved everything up

--- a/app.json
+++ b/app.json
@@ -1,4 +1,4 @@
 {
-  "name": "simCardAuthReactNative",
-  "displayName": "simCardAuthReactNative"
+  "name": "simcardauthrn",
+  "displayName": "simcardauthrn"
 }
