--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sim-card-auth-react-native",
+  "name": "simcardauthrn",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,44 +10,21 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-picker/picker": "^1.9.11",
     "axios": "^0.21.1",
-    "country-data": "^0.0.31",
-    "react": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.1",
+    "react-native": "0.64.0",
     "react-native-flash-message": "^0.1.23",
-    "react-native-gesture-handler": "^1.10.3",
-    "tru-sdk-react-native": "^0.1.6"
+    "tru-sdk-react-native": "^0.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
-    "@react-native-community/eslint-config": "^1.1.0",
-    "babel-jest": "^25.1.0",
-    "eslint": "^6.5.1",
-    "jest": "^25.1.0",
-    "metro-react-native-babel-preset": "^0.59.0",
-    "react-test-renderer": "16.13.1",
-    "yarn": "^1.22.10"
-  },
-  "eslintConfig": {
-    "extends": [
-      "@react-native-community",
-      "prettier"
-    ],
-    "rules": {
-      "prettier/prettier": [
-        "error",
-        {
-          "quoteProps": "consistent",
-          "singleQuote": true,
-          "tabWidth": 2,
-          "trailingComma": "es5",
-          "useTabs": false,
-          "endOfLine": "auto"
-        }
-      ]
-    }
+    "@babel/core": "^7.12.9",
+    "@babel/runtime": "^7.12.5",
+    "@react-native-community/eslint-config": "^2.0.0",
+    "babel-jest": "^26.6.3",
+    "eslint": "7.14.0",
+    "jest": "^26.6.3",
+    "metro-react-native-babel-preset": "^0.64.0",
+    "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
