--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
+    "preinstall": "cd ios && pod install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
@@ -13,8 +14,7 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-flash-message": "^0.1.23",
-    "tru-sdk-react-native": "^0.2.0"
+    "react-native-flash-message": "^0.1.23"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
