--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "preinstall": "cd ios && pod install",
+    "postinstall": "cd ios && pod install",
     "android": "react-native run-android",
     "ios": "react-native run-ios",
     "start": "react-native start",
