--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.0",
-    "react-native-flash-message": "^0.1.23"
+    "react-native-flash-message": "^0.1.23",
+    "react-native-linear-gradient": "^2.5.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
