--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "ios": "react-native run-ios",
     "start": "react-native start",
     "test": "jest",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "prettier": "prettier ./*.{js,json} --write"
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -24,6 +25,7 @@
     "eslint": "7.14.0",
     "jest": "^26.6.3",
     "metro-react-native-babel-preset": "^0.64.0",
+    "prettier": "^2.3.2",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
